tests/NormalTests/paczka1/fuzzy1/75420775.err
Error in line 3: A235 A235 70,8
Error in line 13: A235 A235 89,0
Error in line 12: LY1 S457 43,4
Error in line 17: QoQRbvxEk A235 65,1
Error in line 22: QoQRbvxEk A897 44,7
Error in line 28: hucjnWE A897 69,49
Error in line 31: LY1 S457 61,1
Error in line 33: LY1 S454 99,1
Error in line 34: fWqC A235 18,7
Error in line 38: LY1 A235 80,6
